--- a/Duru.Resources/Resources/StandartStyles.xaml
+++ b/Duru.Resources/Resources/StandartStyles.xaml
@@ -1,5 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    >
   <!-- ******************************* -->
   <!-- Boolean to Visibility Converter -->
   <!-- ******************************* -->
