--- a/Duru.UI/MainWindow.xaml
+++ b/Duru.UI/MainWindow.xaml
@@ -1,76 +1,122 @@
-﻿<Window x:Class="Duru.UI.MainWindow"
+﻿<mah:MetroWindow x:Class="Duru.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:local="clr-namespace:Duru.UI"
         xmlns:viewModel="clr-namespace:Duru.UI.ViewModel;assembly=Duru.UI.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-  <Window.Resources>
-    <viewModel:MainWindowViewModel x:Key="viewModel"
-                            InfoMessageTitle="Please Wait While Loading Application..."
-                            InfoMessageTimeout="1500"
-                            StatusMessage="Sample WPF Application" />
-  </Window.Resources> 
-  <Grid Background="{StaticResource gridBackgroundColor}"
-        DataContext="{StaticResource viewModel}">
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="Auto" />
-    </Grid.RowDefinitions>
+        Title="MainWindow" 
+        Height="450" 
+        Width="800"
+        BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+        BorderThickness="0.25"
+        WindowStartupLocation="CenterScreen">
+    
+    <mah:MetroWindow.Resources>
+        <viewModel:MainWindowViewModel x:Key="viewModel"
+                                       InfoMessageTitle="Please Wait While Loading Application..."
+                                       InfoMessageTimeout="1500"
+                                       StatusMessage="Sample WPF Application" />
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </mah:MetroWindow.Resources>
 
-    <!-- Menu Area -->
-    <Menu Grid.Row="0"
-          IsMainMenu="True">
-      <Menu.ItemsPanel>
-        <ItemsPanelTemplate>
-          <DockPanel HorizontalAlignment="Stretch" />
-        </ItemsPanelTemplate>
-      </Menu.ItemsPanel>
-      <MenuItem Header="_File">
-        <MenuItem Header="E_xit"
-                  Tag="exit"
-                  Click="MenuItem_Click" />
-      </MenuItem>
-      <MenuItem Header="Users"
-                Click="MenuItem_Click"
-                IsEnabled="{Binding UserEntity.IsLoggedIn}"
-                Tag="WPF.Sample.UserControls.UserMaintenanceControl" />
-      <MenuItem Header="Feedback"
-                Click="MenuItem_Click"
-                IsEnabled="{Binding UserEntity.IsLoggedIn}"
-                Tag="WPF.Sample.UserControls.UserFeedbackControl" />
-      <MenuItem Header="{Binding Path=LoginMenuHeader}"
-                HorizontalAlignment="Right"
-                Click="MenuItem_Click"
-                Tag="login" />
-    </Menu>
+    <Grid DataContext="{StaticResource viewModel}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-    <!-- Informational Message Area -->
-    <Border Grid.Row="1"
-            Panel.ZIndex="2"
-            Visibility="{Binding Path=IsInfoMessageVisible,
-            Converter={StaticResource visibilityConverter}}"
-            Style="{StaticResource infoMessageArea}">
-      <StackPanel>
-        <TextBlock FontSize="40"
-                   Text="{Binding Path=InfoMessageTitle}" />
-        <TextBlock FontSize="24"
-                   Text="{Binding Path=InfoMessage}" />
-      </StackPanel>
-    </Border>
+        <!-- Menu Area -->
+        <Menu Grid.Row="0" 
+              Background="{DynamicResource MahApps.Brushes.Menu.Background}"
+              Foreground="{DynamicResource MahApps.Brushes.Text}">
+            <Menu.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <DockPanel HorizontalAlignment="Stretch" />
+                </ItemsPanelTemplate>
+            </Menu.ItemsPanel>
+            
+            <MenuItem Header="_File">
+                <MenuItem Header="E_xit"
+                         Tag="exit"
+                         Click="MenuItem_Click">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconMaterial Kind="ExitToApp" />
+                    </MenuItem.Icon>
+                </MenuItem>
+            </MenuItem>
+            
+            <MenuItem Header="Users"
+                      Click="MenuItem_Click"
+                      IsEnabled="{Binding UserEntity.IsLoggedIn}"
+                      Tag="WPF.Sample.UserControls.UserMaintenanceControl">
+                <MenuItem.Icon>
+                    <iconPacks:PackIconMaterial Kind="AccountGroup" />
+                </MenuItem.Icon>
+            </MenuItem>
+            
+            <MenuItem Header="Feedback"
+                      Click="MenuItem_Click"
+                      IsEnabled="{Binding UserEntity.IsLoggedIn}"
+                      Tag="WPF.Sample.UserControls.UserFeedbackControl">
+                <MenuItem.Icon>
+                    <iconPacks:PackIconMaterial Kind="Comment" />
+                </MenuItem.Icon>
+            </MenuItem>
+            
+            <MenuItem Header="{Binding Path=LoginMenuHeader}"
+                      HorizontalAlignment="Right"
+                      Click="MenuItem_Click"
+                      Tag="login">
+                <MenuItem.Icon>
+                    <iconPacks:PackIconMaterial Kind="Login" />
+                </MenuItem.Icon>
+            </MenuItem>
+        </Menu>
 
-    <!-- Content Area -->
-    <Grid Grid.Row="1"
-          Panel.ZIndex="1"
-          Name="contentArea"
-          Style="{StaticResource contentAreaStyle}" />
+        <!-- Informational Message Area -->
+        <mah:MetroContentControl Grid.Row="1" 
+                                Panel.ZIndex="2"
+                                Visibility="{Binding Path=IsInfoMessageVisible, 
+                                Converter={StaticResource BooleanToVisibilityConverter}}">
+            <Border Background="{DynamicResource MahApps.Brushes.Accent}"
+                    Opacity="0.9"
+                    CornerRadius="8"
+                    Margin="20"
+                    Padding="20">
+                <StackPanel>
+                    <TextBlock FontSize="40"
+                             Text="{Binding Path=InfoMessageTitle}"
+                             Foreground="{DynamicResource MahApps.Brushes.IdealForeground}"
+                             TextAlignment="Center"/>
+                    <TextBlock FontSize="24"
+                             Text="{Binding Path=InfoMessage}"
+                             Foreground="{DynamicResource MahApps.Brushes.IdealForeground}"
+                             TextAlignment="Center"
+                             Margin="0,10,0,0"/>
+                </StackPanel>
+            </Border>
+        </mah:MetroContentControl>
 
-    <!-- Status Message Area -->
-    <TextBlock Grid.Row="2"
-               Text="{Binding Path=StatusMessage}"
-               Style="{StaticResource statusAreaStyle}"  />
-  </Grid>
-</Window>
+        <!-- Content Area -->
+        <mah:MetroContentControl Grid.Row="1"
+                                Panel.ZIndex="1"
+                                Margin="10"
+                                
+                                >
+            <Grid x:Name="ContentArea"/>
+        </mah:MetroContentControl>
+
+        <!-- Status Message Area -->
+        <StatusBar Grid.Row="2"
+                  Background="{DynamicResource MahApps.Brushes.Accent}">
+            <TextBlock Text="{Binding Path=StatusMessage}"
+                     Margin="10,5"
+                     Foreground="{DynamicResource MahApps.Brushes.IdealForeground}"/>
+        </StatusBar>
+    </Grid>
+</mah:MetroWindow>
