--- a/Duru.UI/Pages/LoginPage.xaml
+++ b/Duru.UI/Pages/LoginPage.xaml
@@ -7,19 +7,17 @@
       xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
       xmlns:viewModel="clr-namespace:Duru.UI.ViewModel;assembly=Duru.UI.ViewModel"
       mc:Ignorable="d"
-      Title="LoginPage" Height="450" Width="800">
+      Title="LoginPage">
 
     <Page.Resources>
-        <viewModel:LoginPageViewModel x:Key="LoginPageViewModel" />
+        <viewModel:LoginPageViewModel x:Key="ViewModel" />
     </Page.Resources>
 
-    <Grid DataContext="{StaticResource LoginPageViewModel}"
-          Background="{DynamicResource MahApps.Brushes.Window.Background}">
+    <Grid DataContext="{StaticResource ViewModel}">
         <Border Width="400" Height="400"
-                Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
-                BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
-                BorderThickness="1"
-                CornerRadius="5">
+                        BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+                        BorderThickness="1"
+                        CornerRadius="5">
 
             <Grid Margin="25">
                 <Grid.RowDefinitions>
@@ -88,7 +86,7 @@
                     <PasswordBox Grid.Column="1"
                                  mah:TextBoxHelper.Watermark="Password"
                                  mah:PasswordBoxHelper.RevealButtonContent="{Binding Entity.Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                 Name="TxtPassword"
+                                 x:Name="TxtPassword"
                                  BorderThickness="1,1,1,1"
                                  Height="40"
                                  VerticalContentAlignment="Center" />
