--- a/Duru.UI/MainWindow.xaml
+++ b/Duru.UI/MainWindow.xaml
@@ -5,127 +5,214 @@
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
                  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                 xmlns:viewModel="clr-namespace:Duru.UI.ViewModel;assembly=Duru.UI.ViewModel"
+                 xmlns:navigation="clr-namespace:Duru.UI.Utils"
+                 xmlns:vm="clr-namespace:Duru.UI.ViewModels"
                  mc:Ignorable="d"
-                 Loaded="Window_Loaded"
-                 Title="MainWindow"
-                 Height="600"
-                 Width="1000"
+                 WindowTitleBrush="{DynamicResource MahApps.Brushes.Accent}"
                  BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
-                 BorderThickness="0.25"
-                 WindowStartupLocation="CenterScreen">
+                 Title="Hotel Yönetim Sistemi" Height="600" Width="1000"
+                 WindowStartupLocation="CenterScreen"
+                 mah:DialogParticipation.Register="{Binding}">
 
     <mah:MetroWindow.Resources>
-        <viewModel:MainWindowViewModel x:Key="ViewModel"
-                                       InfoMessageTitle="Please Wait While Loading Application..."
-                                       StatusMessage="Application Initializing..." />
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <DataTemplate x:Key="OptionsHamburgerMenuItem" DataType="{x:Type mah:HamburgerMenuIconItem}">
+            <DockPanel Height="48" LastChildFill="True">
+                <ContentControl x:Name="IconPart"
+                                Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type mah:HamburgerMenu}}, Path=CompactPaneLength}"
+                                Content="{Binding Icon}"
+                                Focusable="False" IsTabStop="False" />
+                <StackPanel VerticalAlignment="Center">
+                    <TextBlock x:Name="Name"
+                               VerticalAlignment="Center"
+                               FontFamily="Segoe UI"
+                               FontWeight="SemiBold"
+                               FontSize="14"
+                               Text="{Binding Label}" />
+                    <TextBlock x:Name="Role"
+                               VerticalAlignment="Center"
+                               FontFamily="Segoe UI"
+                               FontWeight="Light"
+                               FontSize="12"
+                               Text="{Binding Tag}" />
+                </StackPanel>
+                <Button Style="{StaticResource NoBorderButtonStyle}" Width="48" Height="48"
+                        HorizontalAlignment="Right" HorizontalContentAlignment="Center"
+                        VerticalContentAlignment="Center" Click="OptionsButton_Click">
+                    <iconPacks:PackIconFontAwesome Kind="GearSolid" Style="{DynamicResource HamburgerIconStyle}" />
+                </Button>
+            </DockPanel>
+        </DataTemplate>
+        <DataTemplate x:Key="MenuItemTemplate" DataType="{x:Type vm:MenuItem}">
+            <Grid Height="48">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition
+                        Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type mah:HamburgerMenu}}, Path=CompactPaneLength, Mode=OneWay}" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <ContentControl Grid.Column="0"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Content="{Binding Icon}"
+                                Focusable="False" />
+                <TextBlock Grid.Column="1"
+                           VerticalAlignment="Center"
+                           FontSize="16"
+                           Text="{Binding Label}" />
+            </Grid>
+        </DataTemplate>
+
+        <Storyboard x:Key="NavigationStoryboard">
+            <DoubleAnimationUsingKeyFrames BeginTime="00:00:00"
+                                           Storyboard.TargetProperty="(UIElement.Opacity)">
+                <SplineDoubleKeyFrame KeyTime="00:00:00"
+                                      Value="0" />
+                <SplineDoubleKeyFrame KeyTime="00:00:00.150"
+                                      Value="1" />
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames BeginTime="00:00:00"
+                                           Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)">
+                <SplineDoubleKeyFrame KeyTime="00:00:00"
+                                      Value="200" />
+                <SplineDoubleKeyFrame KeySpline="0.1, 0.9, 0.2, 1"
+                                      KeyTime="00:00:00.300"
+                                      Value="0" />
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+
+        <Style BasedOn="{StaticResource {x:Type Frame}}"
+               TargetType="{x:Type Frame}">
+            <Setter Property="navigation:FrameAnimator.FrameNavigationStoryboard"
+                    Value="{StaticResource NavigationStoryboard}" />
+            <Setter Property="RenderTransform">
+                <Setter.Value>
+                    <TranslateTransform />
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Background"
+                    Value="{DynamicResource MahApps.Brushes.Window.Background}" />
+            <Setter Property="ClipToBounds"
+                    Value="True" />
+            <Setter Property="HorizontalAlignment"
+                    Value="Center" />
+            <Setter Property="HorizontalContentAlignment"
+                    Value="Center" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Frame}">
+                        <!--Border ekranın yarısında gözükmüyor width sorunu düzeltilecek.-->
+                        <Border Width="{Binding ActualWidth, ElementName=HamburgerMenuControl}"
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                Padding="0 0 50 0">
+                            <ContentPresenter x:Name="PART_FrameCP">
+                                <ContentPresenter.RenderTransform>
+                                    <TranslateTransform />
+                                </ContentPresenter.RenderTransform>
+                            </ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+
     </mah:MetroWindow.Resources>
 
-    <Grid DataContext="{StaticResource ViewModel}">
+    <mah:MetroWindow.DataContext>
+        <vm:MainWindowViewModel />
+    </mah:MetroWindow.DataContext>
+
+    <!-- Left Window Commands -->
+
+    <mah:MetroWindow.LeftWindowCommands>
+        <mah:WindowCommands ShowSeparators="False">
+            <Button x:Name="GoBackButton"
+                    Width="{Binding ElementName=HamburgerMenuControl, Path=CompactPaneLength}"
+                    AutomationProperties.Name="Go back"
+                    Click="GoBack_OnClick">
+                <mah:FontIcon AutomationProperties.Name="Go back icon"
+                              FontSize="14"
+                              Glyph="&#xE72B;" />
+            </Button>
+        </mah:WindowCommands>
+    </mah:MetroWindow.LeftWindowCommands>
+
+    <!-- Right Window Commands -->
+    <mah:MetroWindow.RightWindowCommands>
+        <mah:WindowCommands>
+            <Button Click="HamburgerToggleButton_Click">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <iconPacks:PackIconCodicons Kind="LayoutSidebarLeft"
+                                                    Width="18"
+                                                    Height="18"
+                                                    VerticalContentAlignment="Center"
+                                                    HorizontalContentAlignment="Center" />
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+        </mah:WindowCommands>
+    </mah:MetroWindow.RightWindowCommands>
+
+    <Grid IsSharedSizeScope="True">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <!-- Menu Area -->
-        <Menu Grid.Row="0"
-              Background="{DynamicResource MahApps.Brushes.Menu.Background}"
-              Foreground="{DynamicResource MahApps.Brushes.Text}">
-            <Menu.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <DockPanel HorizontalAlignment="Stretch" />
-                </ItemsPanelTemplate>
-            </Menu.ItemsPanel>
+        <!-- Hamburger Menu -->
+        <mah:HamburgerMenu x:Name="HamburgerMenuControl"
+                           VerticalScrollBarOnLeftSide="False"
+                           HorizontalAlignment="Left"
+                           IsPaneOpen="False"
+                           ItemInvoked="HamburgerMenuControl_OnItemInvoked"
+                           HorizontalContentAlignment="Stretch"
+                           HamburgerVisibility="Collapsed"
+                           DisplayMode="CompactOverlay"
+                           PaneBackground="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"
+                           Foreground="White"
+                           OptionsVisibility="Hidden"
+                           SelectedIndex="0"
+                           ItemsSource="{Binding Menu}"
+                           OptionsItemsSource="{Binding OptionsMenu}"
+                           Content="{Binding SelectedItem, ElementName=HamburgerMenuControl}"
+                           OptionsItemTemplate="{StaticResource OptionsHamburgerMenuItem}"
+                           ItemTemplate="{StaticResource HamburgerMenuItem}">
+            <mah:HamburgerMenu.HamburgerMenuHeaderTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <iconPacks:PackIconFontAwesome Kind="DSolid" Style="{StaticResource HamburgerIconStyle}"
+                                                       Margin="12" />
+                        <TextBlock Text="Duru Hotels"
+                                   FontSize="28" FontWeight="Regular"
+                                   Foreground="White"
+                                   VerticalAlignment="Center" />
+                    </StackPanel>
+                </DataTemplate>
+            </mah:HamburgerMenu.HamburgerMenuHeaderTemplate>
+        </mah:HamburgerMenu>
 
-            <MenuItem Header="_File">
-                <MenuItem Header="E_xit"
-                          Tag="exit"
-                          Click="MenuItem_Click">
-                    <MenuItem.Icon>
-                        <iconPacks:PackIconMaterial Kind="ExitToApp" />
-                    </MenuItem.Icon>
-                </MenuItem>
-            </MenuItem>
-
-            <MenuItem Header="Users"
-                      Click="MenuItem_Click"
-                      IsEnabled="{Binding EmployeeEntity.IsLoggedIn}"
-                      Tag="Duru.UI.Pages.UserMaintenanceControl">
-                <MenuItem.Icon>
-                    <iconPacks:PackIconMaterial Kind="AccountGroup" />
-                </MenuItem.Icon>
-            </MenuItem>
-
-            <MenuItem Header="Feedback"
-                      Click="MenuItem_Click"
-                      IsEnabled="{Binding EmployeeEntity.IsLoggedIn}"
-                      Tag="Duru.UI.Pages.UserFeedbackControl">
-                <MenuItem.Icon>
-                    <iconPacks:PackIconMaterial Kind="Comment" />
-                </MenuItem.Icon>
-            </MenuItem>
-
-            <MenuItem Header="{Binding Path=LoginMenuHeader}"
-                      HorizontalAlignment="Right"
-                      Click="MenuItem_Click"
-                      Tag="login">
-                <MenuItem.Icon>
-                    <iconPacks:PackIconMaterial Kind="Login" />
-                </MenuItem.Icon>
-            </MenuItem>
-        </Menu>
-
-        <!-- Informational Message Area -->
-        <mah:MetroContentControl Grid.Row="1"
-                                 Panel.ZIndex="2"
-                                 Visibility="{Binding Path=IsInfoMessageVisible, 
-                                 Converter={StaticResource BooleanToVisibilityConverter}}">
-            <mah:MetroContentControl.Background>
-                <SolidColorBrush Opacity="0.3" Color="Black"/>
-            </mah:MetroContentControl.Background>
-            <Border Background="{DynamicResource MahApps.Brushes.Accent}"
-                    Opacity="0.8"
-                    CornerRadius="8"
-                    Padding="20"
-                    Width="480"
-                    Height="160"
-            >
-                <StackPanel>
-                    <mah:ProgressRing IsActive="{Binding IsInfoMessageVisible}"
-                                      Foreground="{DynamicResource MahApps.Brushes.IdealForeground}"
-                                      Width="48"
-                                      Height="48"
-                                      Margin="0,0,0,15" />
-                    <TextBlock FontSize="18"
-                               Text="{Binding Path=InfoMessageTitle}"
-                               Foreground="{DynamicResource MahApps.Brushes.IdealForeground}"
-                               TextAlignment="Center" />
-                    <TextBlock FontSize="12"
-                               Text="{Binding Path=InfoMessage}"
-                               Foreground="{DynamicResource MahApps.Brushes.IdealForeground}"
-                               TextAlignment="Center"
-                               Margin="0,10,0,0" />
+        <!-- Status Bar -->
+        <StatusBar Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource CustomStatusBarStyle}">
+            <StatusBarItem Style="{StaticResource CustomStatusBarItemStyle}">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock Text="Duru v0.1.1" FontWeight="Bold" VerticalAlignment="Center" />
+                    <Rectangle Fill="White" Width="1" Height="16" Margin="16,0,16,0" VerticalAlignment="Center" />
+                    <TextBlock Text="Toplam Veriler: 240" VerticalAlignment="Center" />
+                    <Rectangle Fill="White" Width="1" Height="16" Margin="16,0,16,0" VerticalAlignment="Center" />
+                    <iconPacks:PackIconFontAwesome Kind="GlobeSolid" Style="{StaticResource SmallIconStyle}" />
+                    <TextBlock Margin="4,0,0,0" VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://github.com/lewislosa/duru" Foreground="White">Website</Hyperlink>
+                    </TextBlock>
+                    <iconPacks:PackIconFontAwesome Kind="ScaleBalancedSolid" Style="{StaticResource SmallIconStyle}"
+                                                   Margin="16,0,0,0" />
+                    <TextBlock Margin="4,0,0,0" VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://github.com/lewislosa/duru" Foreground="White">Lisans</Hyperlink>
+                    </TextBlock>
                 </StackPanel>
-            </Border>
-        </mah:MetroContentControl>
-
-        <!-- Content Area -->
-        <mah:MetroContentControl Grid.Row="1"
-                                 Panel.ZIndex="1"
-                                 Margin="10">
-            <Grid x:Name="ContentArea" >
-                <Frame x:Name="FrameContentArea"></Frame>
-            </Grid>
-        </mah:MetroContentControl>
-
-        <!-- Status Message Area -->
-        <StatusBar Grid.Row="2"
-                   Background="{DynamicResource MahApps.Brushes.Accent}">
-            <TextBlock Text="{Binding Path=StatusMessage}"
-                       Margin="10,5"
-                       Foreground="{DynamicResource MahApps.Brushes.IdealForeground}" />
+            </StatusBarItem>
         </StatusBar>
+
     </Grid>
 </mah:MetroWindow>
